@@ -1,5 +1,6 @@
 {{$NEXT}}
    - added import of normalize_args in ::Plugin::Util
+   - set right place for interlude when printing
 
 0.721  2016-04-01 22:13:50 CEST
    - upped minimum version of Log::Log4perl::Tiny for LEVELID_FOR
